# SPO_lab3

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  http-request.http  lab3  main.c
Client/: client.c  client.h
Server/: config_worker.c  config_worker.h  server.c  server.h  server_config.ini  test.lua  test_file.txt
Server/cgi-bin/: test.lua  test.php
